# ZLUDA-Phork

./: Cargo.toml  README.md
cuda_macros/src/: curand.rs  lib.rs
cuda_types/src/: curand.rs  lib.rs
ext/hipfft-sys/: Cargo.toml  build.rs
ext/hipfft-sys/src/: lib.rs
ext/hiprand-sys/: Cargo.toml  build.rs
ext/hiprand-sys/src/: lib.rs
ext/hipsparse-sys/: Cargo.toml  build.rs
ext/hipsparse-sys/src/: lib.rs
ptx/lib/: zluda_ptx_impl.bc  zluda_ptx_impl.cpp
ptx/src/pass/: insert_post_saturation.rs  replace_instructions_with_functions.rs
ptx/src/pass/instruction_mode_to_global_mode/: mod.rs
ptx/src/pass/llvm/: emit.rs
ptx_parser/src/: ast.rs  lib.rs
zluda/src/: lib.rs
zluda/src/impl/: driver.rs  function.rs  graph.rs  memory.rs  module.rs
zluda_bindgen/src/: main.rs
zluda_blas/src/: impl.rs  lib.rs
zluda_blaslt/src/: impl.rs
zluda_common/src/: lib.rs
zluda_dnn/src/: impl.rs  lib.rs
zluda_fft/: Cargo.toml
zluda_fft/src/: impl.rs  lib.rs
zluda_rand/: Cargo.toml
zluda_rand/src/: impl.rs  lib.rs
zluda_sparse/: Cargo.toml
zluda_sparse/src/: impl.rs  lib.rs
