[package]
name = "zluda_fft"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "cufft"

[dependencies]
cuda_macros = { path = "../cuda_macros" }
cuda_types = { path = "../cuda_types" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }
hipfft-sys = { path = "../ext/hipfft-sys" }

[package.metadata.zluda]
linux_symlinks = [
    "libcufft.so.11",
    "libcufft.so.12",
]
windows_paths = ["cufft64_11.dll", "cufft64_12.dll"]
