[package]
name = "zluda_rand"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "curand"

[dependencies]
cuda_macros = { path = "../cuda_macros" }
cuda_types = { path = "../cuda_types" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }
hiprand-sys = { path = "../ext/hiprand-sys" }

[package.metadata.zluda]
linux_symlinks = [
    "libcurand.so.10",
    "libcurand.so.11",
]
windows_paths = ["curand64_10.dll", "curand64_11.dll"]
