[package]
name = "zluda_sparse"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "cusparse"

[dependencies]
cuda_macros = { path = "../cuda_macros" }
cuda_types = { path = "../cuda_types" }
hipsparse-sys = { path = "../ext/hipsparse-sys" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" }

[package.metadata.zluda]
linux_symlinks = ["libcusparse.so.11", "libcusparse.so.12"]
windows_paths = ["cusparse64_11.dll", "cusparse64_12.dll"]
